WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252356
Assertion failure when calling WKBundlePageHasLocalDataForURL() with a URL that contains a fragment identifier
https://bugs.webkit.org/show_bug.cgi?id=252356
Summary
Assertion failure when calling WKBundlePageHasLocalDataForURL() with a URL th...
Jeff Miller
Reported
2023-02-15 15:28:50 PST
Assertion failure when calling WKBundlePageHasLocalDataForURL() with a URL that contains a fragment identifier
Attachments
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2023-02-15 15:28:59 PST
<
rdar://problem/105518815
>
Jeff Miller
Comment 2
2023-02-15 15:40:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10177
EWS
Comment 3
2023-02-16 09:00:07 PST
Committed
260371@main
(40c78192b01e): <
https://commits.webkit.org/260371@main
> Reviewed commits have been landed. Closing PR #10177 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug