Assertion failure when calling WKBundlePageHasLocalDataForURL() with a URL that contains a fragment identifier https://bugs.webkit.org/show_bug.cgi?id=252356 rdar://105518815

Reviewed by Wenson Hsieh.

WKBundlePageHasLocalDataForURL() is the only caller of WebPage::hasLocalDataForURL(), which calls
DocumentLoader::subresource() with the URL. That function only expects URLs without fragment
identifiers, so remove any identifier first in WebPage::hasLocalDataForURL().

* Source/WebCore/loader/cache/MemoryCache.h:
Export MemoryCache::removeFragmentIdentifierIfNeeded() so it can be used from WebKit.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::hasLocalDataForURL):
Remove any fragment identifier from the URL before passing it to DocumentLoader::subresource().

Canonical link: https://commits.webkit.org/260371@main